# isabelizimm.github.io

./: .gitignore  .nojekyll  CNAME  DESCRIPTION  README.md  _config.yml  _index.html  _quarto.yml  _toc.yml  about.html  about.qmd  blog-python.xml  blog-r.xml  blog.html  blog.qmd  blog.xml  books.qmd  dark.scss  frame.css  ide-quiz.html  ide-quiz.qmd  index-test.html  index.html  index.qmd  landing.css  landing.js  landing.scss  light.scss  listings.json  musings.html  pets.html  pets.qmd  pyproject.toml  quiz.html  reading_calculator.html  requirements.txt  robots.txt  search.json  sitemap.xml  star_rating.py  (+10 more)
.github/workflows/: deploy.yml  update.yml
33eb0ac4/: .nojekyll
_posts/: 2021-02-09-DATAcated-day-1.md  2021-02-10-welcome-to-jekyll.markdown
_site/: about.html  index.html  search.json
docs/: .nojekyll  about.html  blog-python.xml  blog-r.xml  blog.html  blog.xml  books.html  ide-quiz.html  index.html  landing.css  listings.json  pets.html  robots.txt  search.json  sitemap.xml  styles.scss  talks-python.xml  talks.html  toast.html  work.html
ec93d80f/: blog.html  sitemap.xml
posts/: DATAcated-day-1.md
posts/2022-03-20_pet-image-detection/: index.html  index.ipynb
posts/2022-03-30_gha-making-gha/: index.html  index.qmd
posts/2022-09-10_multiple-models-api/: R.R  index.html  index.qmd
posts/2022-09-19_pyenv-in-rstudio/: index.html  index.qmd
posts/2022-10-25_state-of-vetiver/: index.html  index.qmd
posts/2023-09-04_making-a-quarto-blog/: index.html
posts/2024-03-07_blind-date-with-a-data-talk/: index.html  index.qmd
(+310 files in other folders)
