[project]
name = "isabelizimm-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "plotnine>=0.15.1",
    "polars>=1.35.2",
    "requests>=2.32.5",
    "shinylive>=0.8.4",
]
